--- a/PyCaret_Diario.ipynb
+++ b/PyCaret_Diario.ipynb
@@ -382,7 +382,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* Como hicimos en el TP#1, promediamos los datos horararios del dia para reducir los datos a procesar\n",
+        "* Promediamos los datos horararios del dia para reducir los datos a procesar\n",
         "* En lugar de tener 26000 observaciones nos quedamos solo con 1100, esto hace mucho mas rapido correr todas las etapas del proceso de AutoML"
       ],
       "metadata": {
@@ -2141,8 +2141,6 @@
       },
       "outputs": [],
       "source": [
-        "# Libreria importada del TP#1 para el analisis de residuos\n",
-        "\n",
         "# Instalacion y carga\n",
         "# !pip install pingouin\n",
         "import pingouin as pg\n",
@@ -2340,7 +2338,7 @@
         "# PyCaret no trae los residuos del modelo, los calculo a mano\n",
         "residuos_blender = exp.predict_model(blender)['y_pred'] - exp.get_config('y_test')\n",
         "\n",
-        "# # Llamo a la funcion creada del TP#1\n",
+        "# # Evaluacion de Residuos\n",
         "residuos_evaluation((residuos_blender))\n",
         "\n",
         "# Nombres de todos los modelos\n",
@@ -2354,7 +2352,7 @@
         "id": "d743d348"
       },
       "source": [
-        "* Utilizamos una Funcion creada en el TP#1 extendida para analizar los Residuos del Modelo Auto-Blend creado, y vemos:\n",
+        "* Utilizamos una Funcion extendida para analizar los Residuos del Modelo Auto-Blend creado, y vemos:\n",
         "* Tanto los tests de Shapiro como de Jarque Bera nos indican que los residuos siguen una Distribucion Normal, lo que es bueno\n",
         "* El test de Breusche-Pagan nos confirma la Homocedasiticdad de los residuos, lo que tambien es bueno. Lo verificamos graficamente\n",
         "* El problema lo tenemos en la Autocorrelacion, la misma es indicada tanto en el test analitico de Durbin-Watson como en la grafica de PCAF (alta correlacion con el lag1)\n",
